--- a/Debug/makefile
+++ b/Debug/makefile
@@ -10,13 +10,13 @@ GEN_CMDS__FLAG :=
 ORDERED_OBJS += \
 "./arp.obj" \
 "./clock.obj" \
-"./commandline.obj" \
 "./eeprom.obj" \
 "./eth0.obj" \
 "./ethernet.obj" \
 "./gpio.obj" \
 "./icmp.obj" \
 "./ip.obj" \
+"./ip_custom_layer.obj" \
 "./mqtt.obj" \
 "./spi0.obj" \
 "./tcp.obj" \
@@ -148,15 +148,15 @@ all: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
 IOT_Project1.out: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
 	@echo 'Building target: "$@"'
 	@echo 'Invoking: Arm Linker'
-	"/home/sadhan/ti/ccs1210/ccs/tools/compiler/ti-cgt-arm_20.2.7.LTS/bin/armcl" -mv7M4 --code_state=16 --float_support=FPv4SPD16 -me --define=ccs="ccs" --define=PART_TM4C123GH6PM -g --gcc --diag_warning=225 --diag_wrap=off --display_error_number --abi=eabi -z -m"IOT_Project1.map" --heap_size=0 --stack_size=4096 -i"/home/sadhan/ti/ccs1210/ccs/tools/compiler/ti-cgt-arm_20.2.7.LTS/lib" -i"/home/sadhan/ti/ccs1210/ccs/tools/compiler/ti-cgt-arm_20.2.7.LTS/include" --reread_libs --diag_wrap=off --display_error_number --warn_sections --xml_link_info="IOT_Project1_linkInfo.xml" --rom_model -o "IOT_Project1.out" $(ORDERED_OBJS)
+	"/home/sadhan/ti/ccs1210/ccs/tools/compiler/ti-cgt-arm_20.2.7.LTS/bin/armcl" -mv7M4 --code_state=16 --float_support=FPv4SPD16 -me --define=ccs="ccs" --define=PART_TM4C123GH6PM -g --gcc --diag_warning=225 --diag_wrap=off --display_error_number --abi=eabi -z -m"IOT_Project1.map" --heap_size=0 --stack_size=8192 -i"/home/sadhan/ti/ccs1210/ccs/tools/compiler/ti-cgt-arm_20.2.7.LTS/lib" -i"/home/sadhan/ti/ccs1210/ccs/tools/compiler/ti-cgt-arm_20.2.7.LTS/include" --reread_libs --diag_wrap=off --display_error_number --warn_sections --xml_link_info="IOT_Project1_linkInfo.xml" --rom_model -o "IOT_Project1.out" $(ORDERED_OBJS)
 	@echo 'Finished building target: "$@"'
 	@echo ' '
 
 # Other Targets
 clean:
 	-$(RM) $(EXE_OUTPUTS__QUOTED)
-	-$(RM) "arp.obj" "clock.obj" "commandline.obj" "eeprom.obj" "eth0.obj" "ethernet.obj" "gpio.obj" "icmp.obj" "ip.obj" "mqtt.obj" "spi0.obj" "tcp.obj" "timer.obj" "tm4c123gh6pm_startup_ccs.obj" "uart0.obj" "udp.obj" "wait.obj" 
-	-$(RM) "arp.d" "clock.d" "commandline.d" "eeprom.d" "eth0.d" "ethernet.d" "gpio.d" "icmp.d" "ip.d" "mqtt.d" "spi0.d" "tcp.d" "timer.d" "tm4c123gh6pm_startup_ccs.d" "uart0.d" "udp.d" "wait.d" 
+	-$(RM) "arp.obj" "clock.obj" "eeprom.obj" "eth0.obj" "ethernet.obj" "gpio.obj" "icmp.obj" "ip.obj" "ip_custom_layer.obj" "mqtt.obj" "spi0.obj" "tcp.obj" "timer.obj" "tm4c123gh6pm_startup_ccs.obj" "uart0.obj" "udp.obj" "wait.obj" 
+	-$(RM) "arp.d" "clock.d" "eeprom.d" "eth0.d" "ethernet.d" "gpio.d" "icmp.d" "ip.d" "ip_custom_layer.d" "mqtt.d" "spi0.d" "tcp.d" "timer.d" "tm4c123gh6pm_startup_ccs.d" "uart0.d" "udp.d" "wait.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
